# ssphub_directory

./: .gitignore  README.md  email_newsletter_generation.py  generate_email.py  get_emails_list.py  model.qmd  my_functions.py  page_generation.py  pyproject.toml  script.py  template.qmd  test_all.py
email_style/: style.css
