[project]
name = "ssphub_directory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grist-api>=0.1.1",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]
